@@ -92,6 +92,7 @@ Version 1.11.1+svn:
    * Added -Wdocumentation to the CMake pedantic flags.
    * Make drakes fly on volcano tiles (bug #20485).
    * Added a FOREACH macro to emulate C++11 for(... : ...) style loops.
+   * Fixed bug #20290: No longer terminate due to a corrupt savegame.
 
 Version 1.11.1:
  * AI:
